Fix collapsed nav overflow.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -165,8 +165,6 @@ a {
     color: aliceblue;
     text-decoration: none !important;
     font-family: Montserrat;
-    transition: transform 0.3s;
-    transform: scale(1.1);
 }
 
 a:hover {
